--- a/style.css
+++ b/style.css
@@ -1092,6 +1092,7 @@ li {
     justify-content: center;
     align-items: center;
     overflow: hidden;
+    border: 1px solid var(--link);
   }
 
 
