--- a/style.css
+++ b/style.css
@@ -408,11 +408,11 @@ box-shadow: 10px 10px 5px rgba(0, 0, 0, 0.08);
 
 
   .button:hover {
-    background-color: var(--linkactive);
+    background-color: var(--linkactive) !important;
   }
   
   .button:active {
-    background-color: var(--link);
+    background-color: var(--link) !important;
   }
 
   .button-outline {
@@ -426,11 +426,11 @@ box-shadow: 10px 10px 5px rgba(0, 0, 0, 0.08);
   }
 
   .button-outline:hover {
-    background-color: var(--linkactive);
+    background-color: var(--linkactive) !important;
   }
 
   .button-outline:active {
-    background-color: var(--link);
+    background-color: var(--link) !important;
   }
 
 .carousel-control-next, .carousel-control-prev {
