--- a/style.css
+++ b/style.css
@@ -47,7 +47,7 @@
   border-radius: 5px;
   padding: 10px;
   cursor: pointer;
-  transition: background-color 0.3s, color 0.3s;
+  transition: all 0.4s;
 }
 
 .fav-btn:hover {
